<resources>
    <string name="app_name">CeuApp</string>

    <string name="about_me">Descricao</string>
    <string name="access">Acessar</string>
    <string name="cancel">Cancelar</string>
    <string name="change_photo">Alterar foto</string>
    <string name="company">Empresa</string>
    <string name="edit">Editar</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="email">Email</string>
    <string name="email_already_in_use">Este email ja esta sendo utilizado!</string>
    <string name="finish_profile">Completar cadastro</string>
    <string name="last_name">Sobrenome</string>
    <string name="name">Nome</string>
    <string name="news_feed">Feed de Notícias</string>
    <string name="ok">OK</string>
    <string name="open_photo">Ver foto</string>
    <string name="password">Senha</string>
    <string name="profile">Perfil</string>
    <string name="save">Salvar</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_in_error">Houve um problema ao entrar</string>
    <string name="signed_in">Entrou</string>
    <string name="signing_in">Entrando…</string>
    <string name="sign_out">Sair</string>
    <string name="user_title">Cargo</string>

    <string name="bundle_code_is_registering">isRegistering</string>
    <string name="bundle_code_show_signed_in_successful">showSignedIn</string>
    <string name="db_code_users">Users</string>
    <string name="db_code_uid">uid</string>
    <string name="db_code_email">email</string>
    <string name="db_code_name">name</string>
    <string name="db_code_title">title</string>
    <string name="db_code_company">company</string>
    <string name="db_code_description">description</string>
    <string name="db_code_type">type</string>
    <string name="preference_file_key">com.cit.ceuapp.USER_DATA</string>
    <string name="storage_code_profile_pictures_folder">ProfilePictures</string>
</resources>
