<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cit.ceuapp.EditProfileActivity">

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:enabled="false"
        android:hint="@string/email"
        android:background="@drawable/edittext_blue"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:id="@+id/et_edit_profile_email"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_email"
        android:hint="@string/name"
        android:background="@drawable/edittext_blue"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:id="@+id/et_edit_profile_name"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_name"
        android:hint="@string/user_title"
        android:background="@drawable/edittext_blue"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:id="@+id/et_edit_profile_title"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_title"
        android:hint="@string/company"
        android:background="@drawable/edittext_blue"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:id="@+id/et_edit_profile_company"/>

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_company"
        android:inputType="textMultiLine"
        android:hint="@string/about_me"
        android:background="@drawable/edittext_blue"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:id="@+id/et_edit_profile_description"/>

</android.support.constraint.ConstraintLayout>